force-app/main/default/objects/Custom_Apex_Error_Handler__c/Custom_Apex_Error_Handler__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Custom Apex Error Handler</label>
</CustomObject>