force-app/main/default/objects/Custom_Apex_Error_Handler__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>You can send emails to the current user by specifying the Name of the Custom Setting to start with &quot;CurrentUser&quot; (no quotes). Example: CurrentUser_ForSuchAndSuch.</description>
    <inlineHelpText>You can send emails to the current user by specifying the Name of the Custom Setting to start with &quot;CurrentUser&quot; (no quotes). Example: CurrentUser_ForSuchAndSuch.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>