force-app/main/default/objects/Custom_Apex_Error_Handler__c/fields/Log_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Log_Exceptions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this checkbox to log ALL, Class Specific or Exception Specific Exceptions</description>
    <inlineHelpText>Check this checkbox to log ALL, Class Specific or Exception Specific Exceptions</inlineHelpText>
    <label>Log Exceptions</label>
    <type>Checkbox</type>
</CustomField>