force-app/main/default/objects/Custom_Apex_Error_Handler__c/fields/Single_Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Single_Apex_Class__c</fullName>
    <inlineHelpText>List the name of a single apex class from which you want to get emails upon errors - if and only if the apex class was coded to leverage these settings. If left blank, person will get every email possible.</inlineHelpText>
    <label>Single Apex Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>