force-app/main/default/objects/Custom_Apex_Error_Handler__c/fields/Single_Exception__c.field-meta.xml
<CustomField>
    <fullName>Single_Exception__c</fullName>
    <label>Single Exception</label>
    <length>255</length>
    <type>Text</type>
</CustomField>