force-app/main/default/objects/Custom_Apex_Error_Handler__c/listViews/All_with_Details.listView-meta.xml
<ListView>
    <fullName>All_with_Details</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Single_Apex_Class__c</columns>
    <columns>Single_Exception__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Details</label>
</ListView>